--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "money",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mikemikemikemikemmmm.github.io/d3stack/", 
+  "homepage": "https://mikemikemikemikemmmm.github.io/d3stack/",
   "dependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
@@ -72,7 +72,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -143,6 +145,7 @@
     ]
   },
   "devDependencies": {
-    "csv-loader": "^3.0.2"
+    "csv-loader": "^3.0.2",
+    "gh-pages": "^2.1.1"
   }
 }
